; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_bilinear4_h_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_bilinear4_h_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bilinear_filters_msa = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_vp8_bilinear4_h_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32**, i32*** @bilinear_filters_msa, align 8
  %17 = load i32, i32* %13, align 4
  %18 = sub nsw i32 %17, 1
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32*, i32** %16, i64 %19
  %21 = load i32*, i32** %20, align 8
  store i32* %21, i32** %15, align 8
  %22 = load i32, i32* %12, align 4
  %23 = icmp eq i32 4, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %7
  %25 = load i32*, i32** %10, align 8
  %26 = load i32, i32* %11, align 4
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i32*, i32** %15, align 8
  %30 = call i32 @common_hz_2t_4x4_msa(i32* %25, i32 %26, i32* %27, i32 %28, i32* %29)
  br label %42

31:                                               ; preds = %7
  %32 = load i32, i32* %12, align 4
  %33 = icmp eq i32 8, %32
  br i1 %33, label %34, label %41

34:                                               ; preds = %31
  %35 = load i32*, i32** %10, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %9, align 4
  %39 = load i32*, i32** %15, align 8
  %40 = call i32 @common_hz_2t_4x8_msa(i32* %35, i32 %36, i32* %37, i32 %38, i32* %39)
  br label %41

41:                                               ; preds = %34, %31
  br label %42

42:                                               ; preds = %41, %24
  ret void
}

declare dso_local i32 @common_hz_2t_4x4_msa(i32*, i32, i32*, i32, i32*) #1

declare dso_local i32 @common_hz_2t_4x8_msa(i32*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
